--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ header {
     background-repeat: no-repeat;
     background-position: center bottom;
     height: 550px;
+    position: relative;
 }
 
 nav {
@@ -20,9 +21,44 @@ nav {
     cursor: pointer;
 }
 
-nav ul {
+.menu {
     display: none;
 }
+
+nav ul {
+    background-color: white;
+    text-align: center;
+    padding: 2.5em;
+    position: absolute;
+    width: calc(100% - 4em);
+    top: 6em;
+}
+
+nav ul li a {
+    color : hsl(232, 10%, 55%); 
+    line-height: 3em;
+}
+
+nav ul li a:hover {
+    background-color: hsl(51, 100%, 49%);
+    padding: 0.8em 1.5em;
+    border-radius: 30px;
+    text-transform: uppercase;
+    color: black;
+    font-family: 'Fraunces', serif;
+
+}
+
+.triangle {
+    width: 0;
+    height: 0;
+    border-left: 40px solid transparent; 
+    border-right: 0px solid transparent; 
+    border-bottom: 40px solid white; 
+    position: absolute;
+    right: 2em;
+    top: 4.5em;
+  }
 
 h1{
     font-family: 'Fraunces', serif;
@@ -30,7 +66,7 @@ h1{
     font-size: 2.2em;
     text-transform: uppercase;
     color: white;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
     text-align: center;
     padding: 1em ;
     line-height: 1.5em;
