--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav ul li a {
     line-height: 3em;
 }
 
-nav ul li a:hover {
+.contact {
     background-color: hsl(51, 100%, 49%);
     padding: 0.8em 1.5em;
     border-radius: 30px;
@@ -84,6 +84,10 @@ h1{
 
 .square {
     padding: 4em 2em;
+}
+
+.img-desktop{
+    display: none;
 }
 
 h2{
@@ -140,23 +144,28 @@ div a {
     background-color: hsl(51, 100%, 49%);
 }
 
-.rectangle {
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: center top;
-    height: 600px;
+.rectangle  {
+    position: relative;
+    height: 100%;
 }
 
-.graphicDesign{
-    background-image: url(../images/mobile/image-graphic-design.jpg);
+.blue {
+    background-color: #97D9CD;
 }
 
-.photography{
-    background-image: url(../images/mobile/image-photography.jpg);
+.rectangle img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.graphicDesign, .photography {
+    position: absolute;
+    z-index: 200;
+    bottom: 0;
 }
 
 h3 {
-    padding-top: 14em;
     font-family: 'Fraunces', serif;
     font-size: 1.6em;
     font-weight: 900;
@@ -169,6 +178,7 @@ h3 {
     text-align: center;
     line-height: 1.5em;
     font-size: 16px;
+    padding-bottom: 20%;
 }
 
 .graphicDesign h3, .graphicDesign p {
@@ -248,4 +258,125 @@ footer ul {
 
 footer .socialMedia {
     padding: 0 4.5em;
+}
+
+@media screen and (min-width: 1439px){
+
+    header {
+        background-image: url(../images/desktop/image-header.jpg)
+    }
+
+    .container{
+        display: flex;
+        width: 100%;
+    }
+
+    .img-mobile {
+        display: none;
+    }
+
+    .img-desktop{
+        display: block;
+        flex: 1;
+    }
+
+    .square {
+        padding: 8em 5em 8em 8em;
+        flex: 1;
+        max-width: 50%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    h2, .square p , .square div{
+        text-align: start;
+    }
+
+    header {
+        height: 750px;
+    }
+    
+    h1{
+        padding-bottom: 2.5em;
+        letter-spacing: 0.2em;
+        font-size: 2.5em;
+    }
+
+    .rectangle {
+        width: 50%;
+    }
+
+    .graphicDesign, .photography {
+        padding: 0 9em;
+    }
+
+    .grid {
+        display: flex;
+    }
+
+    .grid img {
+        width: 25%;
+    }
+
+    .reviews{
+        display: flex;
+        padding: 2em 12% 5em 12%;
+    }
+
+    h4 {
+        padding-top: 7em;
+    }
+
+    .comment {
+        padding-bottom: 4em;
+    }
+
+    footer ul {
+        padding: 2em 38% 5em 38%;
+    }
+
+    ul.socialMedia {
+        padding: 0 43%;
+    }
+
+    .hamburger {
+        display: none;
+    }
+
+    .menu{
+        display: flex;
+    }
+
+    .triangle {
+        display: none;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    nav ul {
+        background-color: transparent;
+        text-align: left;
+        padding: 0em;
+        position: relative;
+        width: 100%;
+        top: 0;
+        display: flex;
+        gap: 3em;
+    }
+    
+    nav ul li a {
+        color : white;
+        line-height: 0em;
+    }
+
+    .contact {
+        font-size: 0.8em;
+        background-color: white;
+    }
+
 }
